syntax = "proto3";

package werewolf;
option java_package="jiang.sichu.werewolf.proto";

service GameService {
    // Group of room operations
    rpc CreateAndJoinRoom (CreateAndJoinRoomRequest) returns (CreateAndJoinRoomResponse);
    rpc UpdateGameConfig (UpdateGameConfigRequest) returns (UpdateGameConfigResponse);
    rpc JoinRoom (JoinRoomRequest) returns (JoinRoomResponse);
    rpc GetRoom (GetRoomRequest) returns (GetRoomResponse);
    rpc TakeSeat (TakeSeatRequest) returns (TakeSeatResponse);
    rpc ReassignRoles (ReassignRolesRequest) returns (ReassignRolesResponse);

    // group of game operations
    rpc StartGame (StartGameRequest) returns (StartGameResponse);
    rpc TakeAction (TakeActionRequest) returns (TakeActionResponse);
}

message CreateAndJoinRoomRequest {}

message CreateAndJoinRoomResponse {
    string room_id = 1;
    string user_id = 2;
}

message UpdateGameConfigRequest {

    string room_id = 1;

    message RoleCount {
        Role role = 1;
        int32 count = 2;
    }
    repeated RoleCount role_counts = 2;
}

message UpdateGameConfigResponse {}

message JoinRoomRequest {
    string user_id = 1;
    string room_id = 2;
}

message JoinRoomResponse {
    string user_id = 1;
}

message GetRoomRequest {
    string room_id = 1;
}

message GetRoomResponse {
    Room room = 1;
}

message TakeSeatRequest {
    string seat_id = 1;
    string user_id = 2;
}

message TakeSeatResponse {}

message ReassignRolesRequest {
    string room_id = 1;
}

message ReassignRolesResponse {}

message StartGameRequest {
    string room_id = 1;
}

message StartGameResponse {}

message TakeActionRequest {
    string game_id = 1;

    message CompleteDarknessAction {}
    message SeerAction {
        string seat_id = 1;
    }
    message WitchAction {
        string poison_seat_id = 1;
        string cure_seat_id = 2;
    }
    message HunterAction {}
    message GuardAction {
        string seat_id = 1;
    }
    message WerewolfAction {
        string seat_id = 1;
    }
    message WhiteWerewolfAction {}
    message HalfBloodAction {
        string seat_id = 1;
    }
    message CompleteSheriffAction {}
    oneof action {
        CompleteDarknessAction darkness = 2;
        SeerAction seer = 3;
        WitchAction witch = 4;
        HunterAction hunter = 5;
        GuardAction guard = 6;
        WerewolfAction werewolf = 7;
        WhiteWerewolfAction white_werewolf = 8;
        HalfBloodAction half_blood = 9;
        CompleteSheriffAction sheriff = 10;
    }
}

message TakeActionResponse {
    message SeerResult {
        bool is_werewolf = 1;
    }
    message HunterResult {
        bool good_to_fire = 1;
    }
    message WhiteWerewolfResult {
        bool good_to_kill = 1;
    }
    oneof result {
        SeerResult seer = 1;
        HunterResult hunter = 2;
        WhiteWerewolfResult white_werewolf = 3;
    }
}

message Room {
    repeated Seat seats = 1;
    Game game = 2;
}

message Seat {
    string id = 1;
    User user = 2;
    Role role = 3;
}

message User {
    string id = 1;
    string img_url = 3;
}

message Game {
    string id = 1;

    enum State {
        UNKNOWN = 0;
        DARKNESS_FALLS = 1;
        ORPHAN_AWAKE = 2;
        HALF_BLOOD_AWAKE = 3;
        GUARDIAN_AWAKE = 4;
        WEREWOLF_AWAKE = 5;
        WITCH_AWAKE = 6;
        SEER_AWAKE = 7;
        HUNTER_AWAKE = 8;
        WHITE_WEREWOLF_AWAKE = 9;
        SHERIFF_ELECTION = 10;
    }
    State state = 2;

    repeated string dead_player_numbers = 3;
}

enum Role {
    UNKNOWN = 0;
    VILLAGER = 1;
    SEER = 2;
    WITCH = 3;
    HUNTER = 4;
    IDIOT = 5;
    GUARDIAN = 6;
    WEREWOLF = 7;
    WHITE_WEREWOLF = 8;
    ORPHAN = 9;
    HALF_BLOOD = 10;
}
